--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,10 @@ a, .btn-link {
     padding-top: 1.1rem;
 }
 
+.main-wrapper {
+  display: inline-flex;
+}
+
 .form-control {
   width: 3.5rem;
 }
